feat(business-module): add cache services